[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flac-raster"
version = "0.2.0"
description = "Convert GeoTIFF raster data to FLAC format with spatial streaming support"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Youssef Harby", email = "me@youssefharby.com" }]
keywords = [
    "raster",
    "flac",
    "geospatial",
    "compression",
    "tiff",
    "cog",
    "streaming",
    "satellite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "rasterio>=1.4.4",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "tqdm>=4.66.0",
    "pyflac>=3.0.0",
    "mutagen>=1.47.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]
cloud = ["obstore>=0.3.0"]
async = ["async-geotiff>=0.2.0", "obstore>=0.3.0"]
all = ["obstore>=0.3.0", "async-geotiff>=0.2.0"]

[project.scripts]
flac-raster = "flac_raster.cli:app"

[project.urls]
Homepage = "https://github.com/yharby/flac-raster"
Repository = "https://github.com/yharby/flac-raster"
Issues = "https://github.com/yharby/flac-raster/issues"
Documentation = "https://github.com/yharby/flac-raster#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/flac_raster"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["flac_raster"]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["twine>=6.2.0"]
